TCP cog implementation